Closed
Bug 1576154
Opened 6 years ago
Closed 6 years ago
Crash in [@ mozilla::image::VectorImage::RequestDiscard]
Categories
(Core :: DOM: Core & HTML, defect)
Tracking
()
RESOLVED
FIXED
mozilla70
| Tracking | Status | |
|---|---|---|
| firefox-esr60 | --- | unaffected |
| firefox-esr68 | --- | unaffected |
| firefox68 | --- | unaffected |
| firefox69 | --- | unaffected |
| firefox70 | --- | fixed |
People
(Reporter: calixte, Assigned: edgar)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file)
This bug is for crash report bp-13673a29-b8ea-4445-a29b-3bbe70190823.
Top 10 frames of crashing thread:
0 libxul.so mozilla::image::VectorImage::RequestDiscard image/VectorImage.cpp:1286
1 libxul.so imgRequestProxy::RequestDiscard image/imgRequestProxy.cpp:592
2 libxul.so nsImageLoadingContent::UntrackImage dom/base/nsImageLoadingContent.cpp:1715
3 libxul.so nsImageLoadingContent::PrepareCurrentRequest dom/base/nsImageLoadingContent.cpp:1450
4 libxul.so nsImageLoadingContent::PrepareNextRequest dom/base/nsImageLoadingContent.cpp:1418
5 libxul.so nsImageLoadingContent::LoadImage dom/base/nsImageLoadingContent.cpp:1155
6 libxul.so nsImageLoadingContent::LoadImage dom/base/nsImageLoadingContent.cpp:1056
7 libxul.so mozilla::dom::HTMLImageElement::AfterMaybeChangeAttr dom/html/HTMLImageElement.cpp:411
8 libxul.so mozilla::dom::HTMLImageElement::AfterSetAttr dom/html/HTMLImageElement.cpp:292
9 libxul.so mozilla::dom::Element::SetAttrAndNotify dom/base/Element.cpp:2524
There are 2 crashes (from 1 installation) in nightly 70 with buildid 20190822215453. In analyzing the backtrace, the regression may have been introduced by patch [1] to fix bug 1568950.
[1] https://hg.mozilla.org/mozilla-central/rev?node=57d7a634ef8f
Flags: needinfo?(echen)
| Assignee | ||
Updated•6 years ago
|
Assignee: nobody → echen
Flags: needinfo?(echen)
| Assignee | ||
Comment 1•6 years ago
|
||
Pushed by echen@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/b72d1d6131cc
Check mSVGDocumentWrapper when trying to report use counters; r=smaug
Comment 3•6 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla70
Updated•4 years ago
|
Has Regression Range: --- → yes
You need to log in
before you can comment on or make changes to this bug.
Description
•