Bug 1576154 - Check mSVGDocumentWrapper when trying to report use counters; r=smaug

Differential Revision: https://phabricator.services.mozilla.com/D43256

--HG--
extra : moz-landing-system : lando